--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <version>5.8.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.2.jre11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
